--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,21 +80,34 @@ body {
   font-weight: 400;
 }
 
-/* Cauhoi font for questions */
+/* Cauhoi font for questions - Pixel style with high contrast */
 .cauhoi-question-font {
   font-family: 'Cauhoi', 'Courier New', monospace;
   font-weight: normal;
-  letter-spacing: 2px;
-  line-height: 1.2;
+  letter-spacing: 1px;
+  line-height: 1.3;
   text-shadow: 
-    3px 3px 0px #000,
-    -3px -3px 0px #000,
-    3px -3px 0px #000,
-    -3px 3px 0px #000,
-    0px 0px 4px rgba(0, 0, 0, 0.8);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    2px 2px 0px #000,
+    -2px -2px 0px #000,
+    2px -2px 0px #000,
+    -2px 2px 0px #000,
+    1px 1px 0px #000,
+    -1px -1px 0px #000,
+    1px -1px 0px #000,
+    -1px 1px 0px #000,
+    0px 0px 6px rgba(0, 0, 0, 0.9);
+  -webkit-font-smoothing: none;
+  -moz-osx-font-smoothing: unset;
+  font-smooth: never;
+  text-rendering: optimizeSpeed;
+  image-rendering: pixelated;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: crisp-edges;
+  font-variant-ligatures: none;
+  font-feature-settings: "liga" 0;
+  text-decoration-skip-ink: none;
 }
+
 
 /* Cautraloi font for answers */
 .cautraloi-font {
@@ -192,7 +205,7 @@ body {
 .pixel-option-button {
   font-family: 'Inter', 'Geist Sans', Arial, Helvetica, sans-serif;
   background-image: url('/images/hero/khung.png');
-  background-size: calc(100% + 4px) calc(100% + 4px);
+  background-size: 95% 95%;
   background-repeat: no-repeat;
   background-position: center;
   border: none;
